--- a/Lab 5/styles.css
+++ b/Lab 5/styles.css
@@ -56,7 +56,10 @@ label {
 }
 
 footer {
-    position: fixed;
-    bottom: 0px;
+    position: absolute;
+    width: 20%;
+    left: 40%;
+    right: 40%;
+    bottom: 1em;
     text-align: center;
 }
