--- a/Lab 5/styles/styles.css
+++ b/Lab 5/styles/styles.css
@@ -36,8 +36,10 @@ form, input, textarea {
     gap: 10px;
 }
 
-label {
-    float: left;
+form div {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
     padding-right: 10px;
 }
 
