--- a/Assignment 2/styles/styles.css
+++ b/Assignment 2/styles/styles.css
@@ -211,6 +211,28 @@ article {
 
 /*** INSERT YOUR WORK BELOW: ***/
 
+form {
+    margin-top: 45px;
+    margin-bottom: 45px;
+}
 
+form label {
+    display: block;
+    font-weight: bold;
+    text-align: center;
+}
 
+input {
+    width: 100px;
+}
 
+form .flex {
+    gap: 15px;
+}
+
+form button {
+    height: 21px;
+    width: 107.2px;
+    margin-top: 30px;
+    /*space on left*/
+}
